Encryption_Policy/epParser.py
# Generated from ep.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class epParser ( Parser ):

    grammarFileName = "ep.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/'", "'['", "']'", "':'", "'\"'", "'&'", 
                     "'{'", "'}'", "'()'", "'|'", "','", "<INVALID>", "<INVALID>", 
                     "'_'", "'#'", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "TBO", "TBC", "COLON", "AP", 
                      "AND", "BO", "BC", "BRACKET", "OR", "COMA", "ENCRYPTEDBY", 
                      "WHERE", "UNDERSCORE", "HASH", "SIGNEDBY", "STRING", 
                      "WS", "COMMENT" ]

    RULE_policy = 0
    RULE_statement = 1
    RULE_expression = 2
    RULE_name = 3
    RULE_component = 4
    RULE_identifier = 5
    RULE_literal = 6
    RULE_constraints = 7
    RULE_constraint = 8
    RULE_constraint_body = 9
    RULE_components = 10
    RULE_function = 11
    RULE_granularities = 12
    RULE_granularity = 13
    RULE_ustring = 14
    RULE_hstring = 15
    RULE_slash = 16

    ruleNames =  [ "policy", "statement", "expression", "name", "component", 
                   "identifier", "literal", "constraints", "constraint", 
                   "constraint_body", "components", "function", "granularities", 
                   "granularity", "ustring", "hstring", "slash" ]

    EOF = Token.EOF
    T__0=1
    TBO=2
    TBC=3
    COLON=4
    AP=5
    AND=6
    BO=7
    BC=8
    BRACKET=9
    OR=10
    COMA=11
    ENCRYPTEDBY=12
    WHERE=13
    UNDERSCORE=14
    HASH=15
    SIGNEDBY=16
    STRING=17
    WS=18
    COMMENT=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(epParser.StatementContext)
            else:
                return self.getTypedRuleContext(epParser.StatementContext,i)


        def getRuleIndex(self):
            return epParser.RULE_policy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy" ):
                listener.enterPolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy" ):
                listener.exitPolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy" ):
                return visitor.visitPolicy(self)
            else:
                return visitor.visitChildren(self)




    def policy(self):

        localctx = epParser.PolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.statement()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << epParser.UNDERSCORE) | (1 << epParser.HASH) | (1 << epParser.STRING))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(epParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(epParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(epParser.ExpressionContext,0)


        def granularities(self):
            return self.getTypedRuleContext(epParser.GranularitiesContext,0)


        def constraints(self):
            return self.getTypedRuleContext(epParser.ConstraintsContext,0)


        def getRuleIndex(self):
            return epParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = epParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.identifier()
            self.state = 40
            self.match(epParser.COLON)
            self.state = 41
            self.expression()
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==epParser.ENCRYPTEDBY:
                self.state = 42
                self.granularities()


            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==epParser.WHERE:
                self.state = 45
                self.constraints()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(epParser.NameContext,0)


        def identifier(self):
            return self.getTypedRuleContext(epParser.IdentifierContext,0)


        def literal(self):
            return self.getTypedRuleContext(epParser.LiteralContext,0)


        def getRuleIndex(self):
            return epParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = epParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.name()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(epParser.ComponentContext)
            else:
                return self.getTypedRuleContext(epParser.ComponentContext,i)


        def slash(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(epParser.SlashContext)
            else:
                return self.getTypedRuleContext(epParser.SlashContext,i)


        def getRuleIndex(self):
            return epParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = epParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 53
                    self.component()
                    self.state = 54
                    self.slash()

                else:
                    raise NoViableAltException(self)
                self.state = 58 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 60
            self.component()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(epParser.LiteralContext,0)


        def identifier(self):
            return self.getTypedRuleContext(epParser.IdentifierContext,0)


        def function(self):
            return self.getTypedRuleContext(epParser.FunctionContext,0)


        def getRuleIndex(self):
            return epParser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent" ):
                return visitor.visitComponent(self)
            else:
                return visitor.visitChildren(self)




    def component(self):

        localctx = epParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_component)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.function()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(epParser.STRING, 0)

        def ustring(self):
            return self.getTypedRuleContext(epParser.UstringContext,0)


        def hstring(self):
            return self.getTypedRuleContext(epParser.HstringContext,0)


        def getRuleIndex(self):
            return epParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = epParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifier)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [epParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(epParser.STRING)
                pass
            elif token in [epParser.UNDERSCORE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.ustring()
                pass
            elif token in [epParser.HASH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.hstring()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AP(self, i:int=None):
            if i is None:
                return self.getTokens(epParser.AP)
            else:
                return self.getToken(epParser.AP, i)

        def STRING(self):
            return self.getToken(epParser.STRING, 0)

        def getRuleIndex(self):
            return epParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = epParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(epParser.AP)

            self.state = 73
            self.match(epParser.STRING)

            self.state = 74
            self.match(epParser.AP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(epParser.WHERE, 0)

        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(epParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(epParser.ConstraintContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(epParser.OR)
            else:
                return self.getToken(epParser.OR, i)

        def getRuleIndex(self):
            return epParser.RULE_constraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraints" ):
                listener.enterConstraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraints" ):
                listener.exitConstraints(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraints" ):
                return visitor.visitConstraints(self)
            else:
                return visitor.visitChildren(self)




    def constraints(self):

        localctx = epParser.ConstraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constraints)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(epParser.WHERE)
            self.state = 77
            self.constraint()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==epParser.OR:
                self.state = 78
                self.match(epParser.OR)
                self.state = 79
                self.constraint()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BO(self):
            return self.getToken(epParser.BO, 0)

        def constraint_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(epParser.Constraint_bodyContext)
            else:
                return self.getTypedRuleContext(epParser.Constraint_bodyContext,i)


        def BC(self):
            return self.getToken(epParser.BC, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(epParser.COMA)
            else:
                return self.getToken(epParser.COMA, i)

        def getRuleIndex(self):
            return epParser.RULE_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint" ):
                listener.enterConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint" ):
                listener.exitConstraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint" ):
                return visitor.visitConstraint(self)
            else:
                return visitor.visitChildren(self)




    def constraint(self):

        localctx = epParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(epParser.BO)
            self.state = 86
            self.constraint_body()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==epParser.COMA:
                self.state = 87
                self.match(epParser.COMA)
                self.state = 88
                self.constraint_body()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(epParser.BC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constraint_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(epParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(epParser.COLON, 0)

        def components(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(epParser.ComponentsContext)
            else:
                return self.getTypedRuleContext(epParser.ComponentsContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(epParser.OR)
            else:
                return self.getToken(epParser.OR, i)

        def getRuleIndex(self):
            return epParser.RULE_constraint_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint_body" ):
                listener.enterConstraint_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint_body" ):
                listener.exitConstraint_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint_body" ):
                return visitor.visitConstraint_body(self)
            else:
                return visitor.visitChildren(self)




    def constraint_body(self):

        localctx = epParser.Constraint_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constraint_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.identifier()
            self.state = 97
            self.match(epParser.COLON)
            self.state = 98
            self.components()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==epParser.OR:
                self.state = 99
                self.match(epParser.OR)
                self.state = 100
                self.components()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(epParser.LiteralContext,0)


        def function(self):
            return self.getTypedRuleContext(epParser.FunctionContext,0)


        def getRuleIndex(self):
            return epParser.RULE_components

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponents" ):
                listener.enterComponents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponents" ):
                listener.exitComponents(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponents" ):
                return visitor.visitComponents(self)
            else:
                return visitor.visitChildren(self)




    def components(self):

        localctx = epParser.ComponentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_components)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [epParser.AP]:
                self.state = 106
                self.literal()
                pass
            elif token in [epParser.STRING]:
                self.state = 107
                self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(epParser.STRING, 0)

        def BRACKET(self):
            return self.getToken(epParser.BRACKET, 0)

        def getRuleIndex(self):
            return epParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = epParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(epParser.STRING)
            self.state = 111
            self.match(epParser.BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GranularitiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENCRYPTEDBY(self):
            return self.getToken(epParser.ENCRYPTEDBY, 0)

        def TBO(self):
            return self.getToken(epParser.TBO, 0)

        def granularity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(epParser.GranularityContext)
            else:
                return self.getTypedRuleContext(epParser.GranularityContext,i)


        def TBC(self):
            return self.getToken(epParser.TBC, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(epParser.COMA)
            else:
                return self.getToken(epParser.COMA, i)

        def getRuleIndex(self):
            return epParser.RULE_granularities

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGranularities" ):
                listener.enterGranularities(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGranularities" ):
                listener.exitGranularities(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGranularities" ):
                return visitor.visitGranularities(self)
            else:
                return visitor.visitChildren(self)




    def granularities(self):

        localctx = epParser.GranularitiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_granularities)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(epParser.ENCRYPTEDBY)
            self.state = 114
            self.match(epParser.TBO)
            self.state = 115
            self.granularity()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==epParser.COMA:
                self.state = 116
                self.match(epParser.COMA)
                self.state = 117
                self.granularity()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(epParser.TBC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GranularityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(epParser.ExpressionContext,0)


        def getRuleIndex(self):
            return epParser.RULE_granularity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGranularity" ):
                listener.enterGranularity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGranularity" ):
                listener.exitGranularity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGranularity" ):
                return visitor.visitGranularity(self)
            else:
                return visitor.visitChildren(self)




    def granularity(self):

        localctx = epParser.GranularityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_granularity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UstringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNDERSCORE(self):
            return self.getToken(epParser.UNDERSCORE, 0)

        def STRING(self):
            return self.getToken(epParser.STRING, 0)

        def getRuleIndex(self):
            return epParser.RULE_ustring

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUstring" ):
                listener.enterUstring(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUstring" ):
                listener.exitUstring(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUstring" ):
                return visitor.visitUstring(self)
            else:
                return visitor.visitChildren(self)




    def ustring(self):

        localctx = epParser.UstringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_ustring)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(epParser.UNDERSCORE)

            self.state = 128
            self.match(epParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HstringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(epParser.HASH, 0)

        def STRING(self):
            return self.getToken(epParser.STRING, 0)

        def getRuleIndex(self):
            return epParser.RULE_hstring

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHstring" ):
                listener.enterHstring(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHstring" ):
                listener.exitHstring(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHstring" ):
                return visitor.visitHstring(self)
            else:
                return visitor.visitChildren(self)




    def hstring(self):

        localctx = epParser.HstringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_hstring)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(epParser.HASH)

            self.state = 131
            self.match(epParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SlashContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return epParser.RULE_slash

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSlash" ):
                listener.enterSlash(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSlash" ):
                listener.exitSlash(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSlash" ):
                return visitor.visitSlash(self)
            else:
                return visitor.visitChildren(self)




    def slash(self):

        localctx = epParser.SlashContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_slash)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(epParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





